--- a/fullList.css
+++ b/fullList.css
@@ -13,7 +13,6 @@ body {
   background: #222;
   color: white;
   text-shadow: 3px 3px 7px rgba(0, 0, 0, 1);
-  /* transition: all 0.5s ease; */
 }
 
 a {
@@ -177,7 +176,7 @@ iframe {
   padding-bottom: 6em;
   width: 100%;
   z-index: 1;
-  transition: all .5s linear;
+  transition: all .5s ease-in-out;
 }
 
 body.listActive .songsInQueWrapper{
