--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   background: #222;
   color: white;
   text-shadow: 3px 3px 7px rgba(0, 0, 0, 1);
-  transition: all 0.5s ease;
+  transition: all 0.3s ease-in-out;
 }
 
 h1 {
