--- a/fullList.css
+++ b/fullList.css
@@ -32,7 +32,7 @@ h2 {
   margin-top: 1.2em;
   font-size: 1.5em;
   font-family: 'Gloria Hallelujah', cursive;
-  color: red;
+  color: #ff7315;
   font-style: italic;
 }
 
@@ -78,7 +78,7 @@ iframe {
   margin: auto;
   margin-top: 1em;
   display: none;
-  color: red;
+  color: #ff7315;
   font-style: italic;
   font-size: 1em;
   font-family: 'Gloria Hallelujah', cursive;
@@ -120,7 +120,7 @@ iframe {
   display: none;
   font-family: 'Gloria Hallelujah', cursive;
   font-style: italic;
-  color: red;
+  color: #ff7315;
   margin-top: 1.5em;
   font-weight: 800;
   letter-spacing: 0.1em;
@@ -137,10 +137,10 @@ iframe {
   text-transform: capitalize;
   border: none;
   box-shadow:
-  5px 5px 11px 2px rgba(0, 0, 0, 1),
-  -3px -3px 11px 0 rgba(90, 90, 90, 0.4);
+    5px 5px 11px 2px rgba(0, 0, 0, 1),
+    -3px -3px 11px 0 rgba(90, 90, 90, 0.4);
   background-color: #181818;
-  color: red;
+  color: #ff7315;
   font-weight: 800;
   border-radius: 3em;
   cursor: pointer;
@@ -179,7 +179,7 @@ iframe {
   transition: all .5s ease-in-out;
 }
 
-body.listActive .songsInQueWrapper{
+body.listActive .songsInQueWrapper {
   transform: translateX(-100%);
 }
 
@@ -416,7 +416,7 @@ body.light .inProgress {
 }
 
 body.light h2 {
-  color: blue;
+  color: #006a71;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4);
 }
 
@@ -499,24 +499,24 @@ body.light .footerInfo {
 
 body.light .clearListButton {
   background-color: #eee;
-  color: blue;
-  box-shadow: 
-  7px 7px 11px 0 rgba(0, 0, 0, .8),
-  -3px -3px 11px 2px rgba(255, 255, 255, .8);
+  color: #006a71;
+  box-shadow:
+    7px 7px 11px 0 rgba(0, 0, 0, .8),
+    -3px -3px 11px 2px rgba(255, 255, 255, .8);
   text-shadow: 1px 1px 3px rgba(0, 0, 0, .8);
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4);
 }
 
-body.light .clearListButton:hover{
-  box-shadow: 
-  10px 10px 11px 0 rgba(0, 0, 0, .8),
-  -6px -6px 11px 2px rgba(255, 255, 255, .8);
+body.light .clearListButton:hover {
+  box-shadow:
+    10px 10px 11px 0 rgba(0, 0, 0, .8),
+    -6px -6px 11px 2px rgba(255, 255, 255, .8);
 }
 
 body.light .clearListButton:active {
-  box-shadow: 
-  5px 5px 11px 2px rgba(255, 255, 255, 0.2),
-  -3px -3px 11px 0 rgba(0, 0, 0, 1);
+  box-shadow:
+    5px 5px 11px 2px rgba(255, 255, 255, 0.2),
+    -3px -3px 11px 0 rgba(0, 0, 0, 1);
 }
 
 
@@ -607,7 +607,7 @@ body.light .clearListButton:active {
 
   .addToPlaylistButton {
     width: 1.6em;
-  }  
+  }
 
   .container {
     width: 520px;
@@ -658,7 +658,7 @@ body.light .clearListButton:active {
   .songsInQueWrapper {
     width: 21em;
     border-top-left-radius: 3em;
-  }  
+  }
 
   .songInQue {
     width: 19em;
