--- a/style.css
+++ b/style.css
@@ -429,6 +429,12 @@ body.light h2 {
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4);
 }
 
+body.light .message {
+  color: #006a71;
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4);
+}
+
+
 body.light .title,
 body.light .artist {
   color: #222;
