--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ iframe {
   border-radius: 3em;
   cursor: pointer;
   font-size: .9em;
+  transition: all 0.3s ease-in-out;
 }
 
 .clearListButton:hover,
